--- a/auto-suggest-component.html
+++ b/auto-suggest-component.html
@@ -6,7 +6,7 @@
         <p>NOTE : Type at least {{ctrl.noOfCharactersTyped}} characters</p>
     </div>
     <div class="results" data-ng-show="!hideResultList">
-        <div class="result" data-ng-class="{ 'active' : $index == active}" data-ng-repeat="result in searchResults |  limitTo:ctrl.noOfResultsShown">{{result[ctrl.typeaheadTitle]}}</div>
+        <div class="result" data-ng-click="select($index)" data-ng-class="{ 'active' : $index == active}" data-ng-repeat="result in searchResults |  limitTo:ctrl.noOfResultsShown">{{result[ctrl.typeaheadTitle]}}</div>
     </div>
     <div class="error" data-ng-show="error">Nothing found</div>
 </div>
